# digital-service-orchestra

./: .checkpoint-needs-review  .dso-plugin-path  .env-id  .gitattributes  .gitignore  .hook-drift-allowlist  .inbound-checkpoint.json  .pre-commit-config.yaml  .review-event-staging-CcCqNC  .review-event-staging-RC1l5X  .review-event-staging-YsIO3p  .review-event-staging-kMiHnE  .review-event-staging-nAxw6R  .shellcheckrc  .test-index  .tmp-comment-GNftop  .tmp-comment-Jwpcop  .tmp-comment-L67Drx  .tmp-comment-atk52M  .tmp-comment-eoB3iR  .tmp-comment-iKaroB  .tmp-comment-ifYak5  .tmp-comment-kY4K4c  .tmp-create-0RbCUX  .tmp-create-0cDpEG  .tmp-create-0iVOQH  .tmp-create-0pAjm1  .tmp-create-0sP6rg  .tmp-create-1Xrs59  .tmp-create-1sUxY7  .tmp-create-2mAklD  .tmp-create-2rXXC2  .tmp-create-3L42sv  .tmp-create-3MI6Sw  .tmp-create-3YWyJD  .tmp-create-3ZLuyC  .tmp-create-3rGE7J  .tmp-create-3zRMwU  .tmp-create-3ze75j  .tmp-create-3ze88w  (+140 more)
.claude/: design-notes.md  dso-artifact-check-cache  dso-config.conf  settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: required-checks.txt
.review-events/: 2026-04-06T015958Z-yruvdwu0.jsonl  2026-04-06T015959Z-axujr0aq.jsonl  2026-04-06T020000Z-s9vq6vzu.jsonl  2026-04-06T020001Z-tbem0fgh.jsonl  2026-04-06T020001Z-vxqzc9xa.jsonl  2026-04-06T020002Z-60pnx82c.jsonl  2026-04-06T020021Z-e76viokb.jsonl  2026-04-06T020022Z-asi5yqwg.jsonl  (+12199 more)
tests/evals/fixtures/multi-marker-project/: package.json  pyproject.toml
tests/evals/fixtures/python-project/: pyproject.toml
tests/evals/fixtures/rust-project/: Cargo.toml
(+102555 files in other folders)
