[tool.poetry]
name = "my-python-app"
version = "0.1.0"
description = "A sample Python/Poetry project for stack detection testing"
authors = ["Test Author <test@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
