[package]
name = "my-rust-app"
version = "0.1.0"
edition = "2021"
description = "A sample Rust/Cargo project for stack detection testing"
authors = ["Test Author <test@example.com>"]

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "my-rust-app"
path = "src/main.rs"
